@@ -9,6 +9,7 @@ PostGIS 1.1.0CVS
 	- full autoconf-based configuration
 	- added scale() and transscale() companion methods to translate()
 	- initial implementation of postgis_proc_upgrade script
+	- NEW line_substring() function
 
 PostGIS 1.0.1
 2005/05/24
